Fix compilation warning on JDK11