@@ -83,7 +83,7 @@ public abstract class FormatFloatNode extends FormatNode {
 
         boolean nan = dval != dval;
         boolean inf = dval == Double.POSITIVE_INFINITY || dval == Double.NEGATIVE_INFINITY;
-        boolean negative = dval < 0.0d || (dval == 0.0d && (new Float(dval)).equals(new Float(-0.0)));
+        boolean negative = dval < 0.0d || (dval == 0.0d && Float.valueOf((float) dval).equals(-0.0f));
 
         byte[] digits;
         int nDigits = 0;
